src/assets/main.css
@import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&family=Biryani:wght@200;300;400;600;700;800;900&family=Federo&display=swap');

@import "tailwindcss";

@custom-variant dark (&:where(.dark, .dark *));

@theme {
  --font-anonymousPro: 'Anonymous Pro';
  --font-biryani: 'Biryani';
  --font-federo: 'Federo';
}

@layer base {
  * {
    font-family: 'Biryani', 'sans-serif';
  }
}

@utility button {
  @apply dark:text-white dark:bg-black dark:border-white px-4 py-2 border dark:shadow-[5px_5px_0_#fff] transition cursor-pointer shadow-[5px_5px_0] hover:translate-y-px hover:shadow-[2px_2px_0];
}

